Improve `generateRandomString` algorithm